# rs-kv2spacetimedb

./: .gitignore  Cargo.toml  README.md  cov.sh
examples/rdb/postgresql/: Cargo.toml  test.sh
examples/rdb/postgresql/src/: count.rs  count_data.rs  create_cached.rs  create_upsert.rs  drop_by_date.rs  get.rs  get_devices4date.rs  list.rs  list_bucket.rs  main.rs  remove_device.rs  remove_stale_data.rs  upsert.rs  upsert_convert.rs  upsert_with_metrics.rs
examples/rdb/sqlite/: Cargo.toml  test.sh
examples/rdb/sqlite/src/: create_upsert.rs  list_bucket.rs  main.rs  upsert.rs
src/: bucket.rs  compose.rs  count.rs  data.rs  date.rs  datetime.rs  day.rs  device.rs  evt.rs  item.rs  kvstore.rs  lib.rs  month.rs  remove.rs  year.rs
src/kvstore/: bucket.rs  count.rs  create.rs  delete.rs  get.rs  list.rs  upsert.rs
