[package]
name = "rs-kv2spacetimedb"
version = "2.5.0"
edition = "2021"
description = "High level DB I/F using low level key/value I/F"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-kv2spacetimedb/latest"
repository = "https://github.com/takanoriyanagitani/rs-kv2spacetimedb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
